--- a/elbalcon/src/components/Navbar/Navbar.css
+++ b/elbalcon/src/components/Navbar/Navbar.css
@@ -13,11 +13,14 @@ nav {
     background-color: var(--main-white);
     margin: 0;
     top:0;
+    left: 0;
+    z-index: 2;
 }
 
-ul{
+.navbar-container{
     display: flex;
     align-items: center;
+    
     gap: 24px;
 }
 
@@ -30,4 +33,14 @@ ul{
     font-family: 'Dancing Script', cursive;
     font-size: large;
     font-weight: bolder;
+}
+/* Quitar el subrayado de los enlaces dentro de las listas */
+
+a {
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+}
+.nav-font{
+    color: var(--secondary-color);
 }
