--- a/elbalcon/src/index.css
+++ b/elbalcon/src/index.css
@@ -2,7 +2,12 @@
   font-family: 'Bungee', sans-serif;
   font-family: 'Dancing Script', cursive;
   font-family: 'Chonburi', serif;
-  background-color:var(--soft-clear-brown);
+  background-color:var(--background-black);
+  background-image: url('./assets/img/beb91fe5-5192-4a7a-b2d5-29514c5aeac0.jpeg');
+  background-size:cover;
+  background-position-x:center;
+  background-position-y: -300px;
+  background-repeat:no-repeat ;
   --secondary-color: #463724;
   --form-color:#78472f;
   --main-white:#f5f6f7;
@@ -13,8 +18,20 @@
   --dark-blue:#1f334d;
   padding: 0px;
   margin: 0px;
+  z-index: -10;
 
+  &:before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    z-index: -9;
+  }
 }
+
 html{
   margin:0;
   padding:0;
@@ -30,18 +47,19 @@ body{
 
 
 }
-/* Quitar el subrayado de los enlaces dentro de las listas */
-ul li a,
-ol li a {
-    text-decoration: none;
-    color: var(--secondary-color);
-    padding: 0;
-    margin: 0;
-}
+
 
 /* Quitar los puntos de las listas */
 ul, ol {
   list-style: none;
   text-decoration: none;
   color: var(--form-color);
+}
+
+@media (max-width:1000px) {
+  :root{
+    background-size:auto;
+    background-position-x:center;
+    background-position-y: -300px;
+  }
 }
