--- a/elbalcon/src/pages/Menu/Menu.css
+++ b/elbalcon/src/pages/Menu/Menu.css
@@ -5,4 +5,25 @@
     width: 100%;
     max-width: 1024px;
     z-index: 2;
+    background-color: rgba(179, 161, 113, 0.5);
+    padding: 24px;
+    margin: 0;
+    color: black;
+    overflow-y: scroll;
+    height: 100%;
+
+}
+
+.items-container{
+    display: flex;
+    background-color:rgba(44, 35, 23, 0.2);
+    position: fixed;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 88vh;
+    color: var(--main-white);
+    
+
 }
