--- a/elbalcon/src/components/modal/Create/styles.css
+++ b/elbalcon/src/components/modal/Create/styles.css
@@ -9,6 +9,8 @@
     padding: 30px;
     border-radius: 8px;
     z-index: 11;
+    max-height: 740px;
+    overflow: scroll;
 
 }
 .modal-create-options{
@@ -83,7 +85,7 @@ label{
 .error{
     color: red;
     font-size: small;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0;
     margin: 0;
     gap:0;
@@ -98,7 +100,41 @@ label{
     height: 64px;
     width: 100%;
     background-color: rgba(10,32, 30, 0.2);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border: none;
     outline: none;
     resize: inherit;
 }
+
+
+.select-menu-items {
+    display: flex;
+    padding: 12px;
+    padding-right: 20px;
+    margin: 0;
+    width: 100%;
+    background-color: rgba(10, 32, 30, 0.2);
+    border: none;
+    outline: none;
+    resize: inherit;
+    overflow: auto;
+    font-family: 'Arial', sans-serif; /* Cambia la fuente del elemento select */
+  }
+  
+  .select-menu-options {
+    font-family: 'Arial', sans-serif; /* Cambia la fuente de las opciones */
+  }
+
+  .board-input{
+    display: flex;
+    margin: 8px;
+    padding: 12px;
+    margin: 0;
+    padding: 12px;
+    width: 100%;
+    background-color: rgba(10,32, 30, 0.2);
+    border: none;
+    outline: none;
+    resize: inherit;
+    overflow: auto;
+  }
