--- a/elbalcon/src/components/modal/styles.css
+++ b/elbalcon/src/components/modal/styles.css
@@ -26,7 +26,7 @@
     border-radius: 8px;
     margin: 40px;
     z-index: 11;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 .modal-options{
     align-items: flex-start;
