--- a/elbalcon/src/pages/Costs/Costs.css
+++ b/elbalcon/src/pages/Costs/Costs.css
@@ -4,7 +4,7 @@
 .tab-columns{
     display: grid;
     background-color: var(--main-white);
-    width: 98%;
+    width: 80vw;
     margin: 0;
     align-items: center;
     justify-content: center;
